Adopt Java 16 immutable list collection in CryotoShreddingSerializer